# c-mnist-nn

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
src/: configs.h  gui.c  gui.h  main.c  nn.c  nn.h  train.c  train.h  viz.c  viz.h
